kubernetes/apps/pihole/base/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      volumes:
        - name: pihole-etc
          persistentVolumeClaim:
            claimName: pihole-etc-pvc
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:latest
          imagePullPolicy: Always
          # envFrom:
          #   - configMapRef:
          #       name: pihole-cm
          ports:
            - containerPort: 53
              name: pihole-dns-tcp
              protocol: TCP
            - containerPort: 53
              name: pihole-dns-udp
              protocol: UDP
            - containerPort: 67
              name: pihole-67-udp
              protocol: UDP
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-etc
